refactor: Migrate from java.net.URL to java.net.URI per Sonar rule java:S2112 (#2069)
---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: kthoms <265597+kthoms@users.noreply.github.com>
Co-authored-by: Karsten Thoms <thoms@itemis.de>